--- a/client/styles.css
+++ b/client/styles.css
@@ -6,7 +6,25 @@
   text-align: center;
 }
 
-#canvas-video {
+#canvas-face {
+  position: absolute;
+  z-index: 1;
+  width: 640px;
+  height: 480px;
+  border: 1px solid #ccc;
+}
+
+#canvas-overlay {
+  position: absolute;
+  z-index: 2;
+  width: 640px;
+  height: 480px;
+  border: 1px solid #ccc;
+}
+
+#overlay-container > img{
+  position: absolute;
+  z-index: 2;
   width: 640px;
   height: 480px;
   border: 1px solid #ccc;
